# picovo

./: CMakeLists.txt  README.md  config-tum-dataset.yaml
lib/sophus/: common.hpp
src/: main.cc  picovo_config.h
src-mcu/: CMakeLists.txt  main.c  main.h  run_dataset.h  run_tum.c
src-mcu/drivers/: bsp_driver_sd.c  ffconf.h  sd_diskio.c  sd_diskio.h  stm32f7xx_hal_conf.h  stm32f7xx_hal_msp.c  stm32f7xx_it.c  stm32f7xx_it.h
src-mcu/drivers/STM32F7XX_HAL/Src/: stm32f7xx_hal_sd.c
src-mcu/picovo-mcu/: distance_transform.cc  distance_transform.h  picoedge.cc  picoedge.h  picovo_config.h  solver_lm_fixpoint.cc  solver_lm_fixpoint.h  solver_lm_float.cc  tracker_rgbd.cc  tracker_rgbd.h
src-mcu/scripts/: STM32F767ZITx_FLASH.ld  gdbinit  parse_mcu_stat.awk  resize_raw.py  st_nucleo_f7.cfg
src/imgproc/: distance_transform.cc  distance_transform.h  distance_transform_nn.cc  distance_transform_nn.h  picoedge.cc  picoedge.h  picovo_frame.h
src/solver/: solver_base.h  solver_gd.cc  solver_gd.h  solver_lm.cc  solver_lm.h  solver_lm_fixpoint.cc  solver_lm_fixpoint.h  solver_lm_ic.cc  solver_lm_ic.h  solver_lm_nn.cc  solver_lm_nn.h  solver_lm_w_lut.cc  solver_lm_w_lut.h
src/tracker/: tracker_base.h  tracker_rgbd.cc  tracker_rgbd.h
src/viewer/: viewer.cc  viewer.h
